--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a href="/acon"><img alt="A C O N" src="https://lh5.googleusercontent.com/-JN4T5XqIrCk/VfFXaOplvLI/AAAAAAAAAgI/0J5MVQb4Bps/s626-no/aconp.png" width="230"></a></h1>
+      <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://lh5.googleusercontent.com/-JN4T5XqIrCk/VfFXaOplvLI/AAAAAAAAAgI/0J5MVQb4Bps/s626-no/aconp.png" width="230"></a></h1>
     </section>
   <nav>
   	<ul>
