--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <link rel="profile" href="/">
 <link rel="icon" 
       type="image/png" 
-      href="https://lh5.googleusercontent.com/-JN4T5XqIrCk/VfFXaOplvLI/AAAAAAAAAgI/0J5MVQb4Bps/s626-no/aconp.png">
+      href="https://github.com/a-mar/shiz/blob/master/meh/aar.png">
       
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
@@ -18,7 +18,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://lh5.googleusercontent.com/-JN4T5XqIrCk/VfFXaOplvLI/AAAAAAAAAgI/0J5MVQb4Bps/s626-no/aconp.png" width="230"></a></h1>
+      <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://github.com/a-mar/shiz/blob/master/meh/aar.png" width="230"></a></h1>
     </section>
   <nav>
   	<ul>
@@ -36,7 +36,7 @@
       <footer class="site-footer">
         <span class="site-footer-credits"><a href="https://pages.github.com" title="GitHub Pages"><i class="fa fa-github"></i></a> </span>
         <span class="site-footer-other"><i class="fa fa-copyright"></i> 2015</span>
-        <span class="site-footer-owner"><a href="/"><img alt="A C O N" src="https://lh5.googleusercontent.com/-JN4T5XqIrCk/VfFXaOplvLI/AAAAAAAAAgI/0J5MVQb4Bps/s626-no/aconp.png" width="31"></a></span>
+        <span class="site-footer-owner"><a href="/"><img alt="A C O N" src="https://github.com/a-mar/shiz/blob/master/meh/aar.png" width="31"></a></span>
       </footer>
 
   
