--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -94,7 +94,9 @@ h6 {
     margin-right: 0;
     font-weight: 400;
 }
-
+nav {
+  font-family:'Nuvo', sans-serif;
+}
 .page-header {
   font-family:'Bauer', sans-serif;
   color: #fff;
