--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -94,9 +94,7 @@ h6 {
     margin-right: 0;
     font-weight: 400;
 }
-nav a {
-  font-family:'Nuvo', sans-serif;
-}
+
 .page-header {
   font-family:'Bauer', sans-serif;
   color: #fff;
@@ -142,7 +140,7 @@ nav ul li {
     margin-right:100px;
     margin-left:-40px;
     font-weight: 300;
-    text-transform:uppercase;
-    font-variant: small-caps;
-    font-size: 85%;
+    font-family:'Nuvo', sans-serif;
+    text-transform:lowercase;
+    font-size: 90%;
 }
