--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,41 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-<head>
-<link rel="profile" href="/">
-<link rel="icon" 
-      type="image/png" 
-      href="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png">
-      
-    <meta charset="UTF-8">
-    <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Fira+Sans:400,300italic,300,400italic,500,500italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,700italic,300,300italic&amp;subset=latin,vietnamese,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
+	
+{% include head.html %}
+
   <body>
-  <nav>
-  	<ul>
-  		<li><a href="/">Home</a></li>
-  		<li><a href="/about">About</a></li>
-    	</ul>
-  </nav>
+  	
+	{% include nav.html %}
 
-			<div class="container">
+		<div class="container">
+				
+		{{ content }}
 			
-			{{ content }}
-			
-			</div><!-- /.container -->
-      
-      <footer class="site-footer">
-        <span class="site-footer-credits"><a href="https://pages.github.com" title="GitHub Pages"><i class="fa fa-github"></i></a> </span>
-        <span class="site-footer-other"><i class="fa fa-copyright"></i> 2015</span>
-        <span class="site-footer-owner"><a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="31"></a></span>
-      </footer>
-
+		</div><!-- /.container -->
+		
+	{% include footer.html %}
   
   </body>
+  
 </html>
