--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <div class="page-header">
-  <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="200"></a></h1>
+  <a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="200"></a>
 </div>
