--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -111,6 +111,7 @@ h6 {
       background-color:transparent;}
   
 .site-footer {
+  font-family:'Nuvo', sans-serif;
   padding-top: 3rem;
   margin-top: 3rem;
   border-top: solid 1px #eff0f1; }
