--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -12,12 +12,42 @@
   src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/NuvoWeb-Medi.woff') format('woff');
 }
 
+@font-face {
+  font-family:'FiraBook';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/FiraSans-Book.woff') format('woff');
+}
+
+@font-face {
+  font-family:'FiraBookIt';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/FiraSans-BookItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family:'FiraMed';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/FiraSans-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family:'FiraMedIt';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/FiraSans-MediumItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family:'CooHewBk';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/CooperHewitt-Book.woff') format('woff');
+}
+
+@font-face {
+  font-family:'CooHewTh';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/CooperHewitt-Thin.woff') format('woff');
+}
+
 body {
   width:73%;
   padding:0px 70px 70px;
   margin-left:auto;
   margin-right:auto;
-  font: 131%/1.32 "Fira Sans", sans-serif;
+  font: 131%/1.32 'FiraBook', sans-serif;
   font-weight: 300;
   color: #606c71; }
 
@@ -31,6 +61,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
   color:#00B4F1;
+  font-family:'CooHewBk', sans-serif;
 }
 
 h1 { 
@@ -40,7 +71,6 @@ h1 {
     margin-bottom: 0.67em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: 500;
 }
 
 h2 {
@@ -50,7 +80,6 @@ h2 {
     margin-bottom: 0.83em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: 500;
 }
 
 h3 { 
@@ -60,7 +89,6 @@ h3 {
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: 500;
 }
 
 h4 { 
@@ -69,7 +97,6 @@ h4 {
     margin-bottom: 1.33em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: 500;
 }
 
 h5 { 
@@ -80,7 +107,6 @@ h5 {
     margin-bottom: 1.67em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: 500;
 }
 
 h6 { 
@@ -92,15 +118,13 @@ h6 {
     margin-bottom: 2.33em;
     margin-left: 0;
     margin-right: 0;
-    font-weight: 400;
 }
 
 .page-header {
   font-family:'Bauer', sans-serif;
   color: #fff;
   text-align: center;
-  font-size: 300%;
-  font-weight: 300; }
+  font-size: 300%; }
 .page-header a {
   color: #FEE;
   font-weight:300;
@@ -119,7 +143,6 @@ h6 {
 .site-footer-owner, .site-footer-credits, .site-footer-other {
   display: block;
   color: #819198;
-  font-weight: 300;
   font-size: 85%;
 }
 
@@ -140,7 +163,6 @@ nav ul li {
     display: inline;
     margin-right:100px;
     margin-left:-40px;
-    font-weight: 300;
     font-family:'Nuvo', sans-serif;
     text-transform:lowercase;
     font-size: 90%;
