--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -123,8 +123,7 @@ h6 {
 .page-header h1, h2, h3, h4, h5, h6 {
   color:#00B4F1;
   font-family:'Bauer', sans-serif;
-  text-align: center;
-  font-size: 300%; }
+  text-align: center; }
   
 .page-header a {
   color: #FEE;
