--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -123,7 +123,9 @@ h6 {
 .page-header h1, h2, h3, h4, h5, h6 {
   color:#00B4F1;
   font-family:'Bauer', sans-serif;
-  text-align: center; }
+  text-align: center;
+  font-size:5rem;
+}
   
 .page-header a {
   color: #FEE;
