--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <footer class="site-footer">
-    <span class="site-footer-credits"><a href="https://pages.github.com" title="GitHub Pages"><i class="fa fa-github"></i></a> </span>
+    <span class="site-footer-owner"><a href="/"><img alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="32"></a></span>
     <span class="site-footer-other"><i class="fa fa-copyright"></i> 2015</span>
-    <span class="site-footer-owner"><a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="31"></a></span>
 </footer>
