--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -59,9 +59,9 @@ a {
     background-color: #FEE;
     border-radius: 10px}
 
-.main-content h1, h2, h3, h4, h5, h6 {
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   color:#00B4F1;
-  font-family:'CooHewBk', sans-serif;
+  font-family:'CooHewTh', sans-serif;
 }
 
 .main-content h1 { 
@@ -120,7 +120,7 @@ a {
     margin-right: 0;
 }
 
-.page-header h1, h2, h3, h4, h5, h6 {
+.page-header, .project-tagline {
   color:#00B4F1;
   font-family:'Bauer', sans-serif;
   text-align: center;
