--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -51,20 +51,37 @@ body {
   font-weight: 300;
   color: #606c71; }
 
+p {
+  font-family: 'FiraBook', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+em {
+  font-family: 'FiraBookIt', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+strong {
+  font-family: 'FiraMed', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
 a {
   color: #444;
-  font-weight:400;
   text-decoration: none; }
   a:hover {
     background-color: #FEE;
     border-radius: 10px}
 
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+h1, h2, h3, h4, h5, h6 {
   color:#00B4F1;
   font-family:'CooHewTh', sans-serif;
 }
 
-.main-content h1 { 
+h1 { 
     display: block;
     font-size: 200%;
     margin-top: 0.67em;
@@ -73,7 +90,7 @@ a {
     margin-right: 0;
 }
 
-.main-content h2 {
+h2 {
     display: block;
     font-size: 141%;
     margin-top: 0.83em;
@@ -82,7 +99,7 @@ a {
     margin-right: 0;
 }
 
-.main-content h3 { 
+h3 { 
     display: block;
     font-size: 115%;
     margin-top: 1em;
@@ -91,7 +108,7 @@ a {
     margin-right: 0;
 }
 
-.main-contenth4 { 
+{ 
     display: block;
     margin-top: 1.33em;
     margin-bottom: 1.33em;
@@ -99,7 +116,7 @@ a {
     margin-right: 0;
 }
 
-.main-content h5 { 
+h5 { 
     display: block;
     font-size: 89%;
     text-transform:uppercase;
@@ -109,7 +126,7 @@ a {
     margin-right: 0;
 }
 
-.main-content h6 { 
+h6 { 
     display: block;
     font-size: 82%;
     text-transform:uppercase;
