--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -139,6 +139,7 @@ h6 {
 
 .page-header, .project-tagline {
   color:#00B4F1;
+  font-weight:300;
   font-family:'Bauer', sans-serif;
   text-align: center;
   font-size:5rem;
@@ -162,6 +163,7 @@ h6 {
   
 .site-footer {
   font-family:'Nuvo', sans-serif;
+  font-weight:300;
   padding-top: 3rem;
   margin-top: 3rem;
   border-top: solid 1px #eff0f1; }
