--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,7 +49,11 @@ body {
   margin-right:auto;
   font: 131%/1.35 'FiraBook', sans-serif;
   font-weight: 300;
-  color: #606c71; }
+  color: #606c71;
+  text-rendering: optimizeLegibility;
+  -webkit-font-variant-ligatures: common-ligatures;
+  font-variant-ligatures: common-ligatures;
+}
 
 p {
   font-family: 'FiraBook', sans-serif;
