--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -82,7 +82,8 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
   color:#00B4F1;
-  font-family:'CooHewTh', sans-serif;
+  font-family:'CooHewBk', sans-serif;
+  font-weight: normal;
 }
 
 h1 { 
