--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -3,11 +3,6 @@
 }
 
 @font-face {
-  font-family:'Bauer';
-  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/BauerGroteskWebPro-Medium.woff') format('woff');
-}
-
-@font-face {
   font-family:'Nuvo';
   src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/NuvoWeb-Medi.woff') format('woff');
 }
@@ -145,7 +140,7 @@ h6 {
 .page-header, .project-tagline {
   color:#00B4F1;
   font-weight:300;
-  font-family:'Bauer', sans-serif;
+  font-family:'FFBauer', sans-serif;
   text-align: center;
   font-size:5rem;
   font-feature-settings: "kern" 1, "liga" 1, "ss02" 1, "ss03" 1, "titl" 1, "tnum" 1, "lnum" 1;
