--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <footer class="site-footer">
-    <span class="site-footer-other"><i class="fa fa-copyright"></i> 2015</span>
-    <span class="site-footer-credits">@a-mar</span>
+    <span class="site-footer-credits">&copy; 2015</span>
     <span class="site-footer-owner"><a href="/"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="43"></a></span>
 </footer>
