--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,13 @@
 <footer class="site-footer">
     <span class="site-footer-credits">&copy; 2015</span>
+    <span class="site-footer-other">
+        <nav>
+            <ul>
+  		        <li><a href="/">Home</a></li>
+  		        <li><a href="/about">About</a></li>
+  		        <li><a href="/blog">Blahg</a></li>
+            </ul>
+        </nav>
+    </span>
     <span class="site-footer-owner"><a href="/"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="43"></a></span>
 </footer>
