--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -160,7 +160,8 @@ h6 {
 }
 
 li.displayed {
-    display: block;
+    display: inline-block;
+    text-align:center;
     margin-left: auto;
     margin-right: auto;}
 
