--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -160,10 +160,9 @@ h6 {
 }
 
 li.displayed {
-    display: inline-block;
-    text-align:center;
-    margin-left: auto;
-    margin-right: auto;}
+    display: inline;
+    margin-right:100px;
+    margin-left:-40px;}
 
 nav ul li {
     display: inline;
