--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
     <span class="site-footer-credits">&copy; 2015</span>
-    <span class="site-footer-other"><a href="#" title="Back to Top"><i class="fa fa-arrow-circle-up fa-lg"></i></a></span>
+    <span class="site-footer-other"><a href="#" title="Back to Top"><i class="fa fa-arrow-circle-o-up fa-lg"></i></a></span>
     <span class="site-footer-owner"><a href="/"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="43"></a></span>
 </footer>
