--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,7 +9,7 @@ body {
   margin-right:auto;
   font: 131%/1.35 'FiraBook', sans-serif;
   font-weight: 300;
-  color: #606c71;
+  color: #6F6F6F;
   text-rendering: optimizeLegibility;
   -webkit-font-variant-ligatures: common-ligatures;
   font-variant-ligatures: common-ligatures;
