--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,9 +10,15 @@ body {
   font: 131%/1.35 'FiraBook', sans-serif;
   font-weight: 300;
   color: #6F6F6F;
+  font-feature-settings: "liga", "pnum", "cpsp", "case";
   text-rendering: optimizeLegibility;
   -webkit-font-variant-ligatures: common-ligatures;
   font-variant-ligatures: common-ligatures;
+  -webkit-font-feature-settings: "liga", "pnum", "cpsp", "case";
+  -moz-font-feature-settings: "liga", "pnum", "cpsp", "case";
+  -moz-font-feature-settings: "liga", "pnum", "cpsp", "case";
+  -ms-font-feature-settings: "liga", "pnum", "cpsp", "case";
+  -o-font-feature-settings: "liga", "pnum", "cpsp", "case";
 }
 
 p {
@@ -169,7 +175,13 @@ nav ul li {
     margin-right:100px;
     margin-left:-40px;
     font-family:'Nuvo', sans-serif;
-    text-transform:lowercase;
+    font-feature-settings: "unic";
+  text-transform: none;
+  -webkit-font-feature-settings: "unic";
+  -moz-font-feature-settings: "unic";
+  -moz-font-feature-settings: "unic";
+  -ms-font-feature-settings: "unic";
+  -o-font-feature-settings: "unic";
     font-size: 90%;
 }
 
