--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -184,8 +184,15 @@ nav ul li {
     margin-right:100px;
     margin-left:-40px;
     font-family:'Nuvo', sans-serif;
+    font-feature-settings: "liga", "smcp";
     text-rendering: optimizeLegibility;
-    font-variant:small-caps;
+    -webkit-font-variant-ligatures: common-ligatures;
+    font-variant-ligatures: common-ligatures;
+    -webkit-font-feature-settings: "liga", "smcp";
+    -moz-font-feature-settings: "liga", "smcp";
+    -moz-font-feature-settings: "liga", "smcp";
+    -ms-font-feature-settings: "liga", "smcp";
+    -o-font-feature-settings: "liga", "smcp";
     font-size: 90%;
 }
 
