--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -191,3 +191,7 @@ img.displayed {
     display: block;
     margin-left: auto;
     margin-right: auto }
+
+li:not(:last-child) {
+    padding-bottom: 5px;
+}
