--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,6 @@
     <ul>
   		<li><a href="/">Home</a></li>
   		<li><a href="/about">About</a></li>
-  		<li><a href="/blog">Blahg</a></li>
+  		<li><a href="/blahg">Blahg</a></li>
     </ul>
 </nav>
