--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -182,6 +182,26 @@ h6 {
       background-color:transparent;
     }
 
+#header{
+  margin-top:1rem;
+  margin-bottom:2rem;
+  padding-top:1rem;
+  padding-bottom:2rem;
+  border-bottom: solid 1px #eff0f1;
+}
+
+#header-left {
+  float:left;
+  text-align:left;
+  margin-left:-13px;
+}
+
+#header-right {
+  text-align:right;
+  margin-right:0;
+  overflow: hidden;
+}
+
 /* Page header */
   @media screen and (min-width: 64em) {
     .page-header {
