--- a/_includes/headera.html
+++ b/_includes/headera.html
@@ -30,8 +30,9 @@
 <div id="header-right">
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
+  		<li><a href="/">Home</a></li>
+  		<li><a href="/about">About</a></li>
+  		<li><a href="/blahg">Blahg</a></li>
     </ul>
   </nav>
 </div>
