--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -3,14 +3,16 @@
 	
 {% include head.html %}
 
-  <body>
+{% include heada.html %}
+
+  <!--<body>
   	
-	{% include nav.html %}
+	{% include nav.html %} -->
 
 		{{ content }}
 		
 	{% include footer.html %}
   
-  </body>
+  <!--</body>-->
   
 </html>
