--- a/_layouts/landinga.html
+++ b/_layouts/landinga.html
@@ -3,14 +3,16 @@
 	
 {% include heada.html %}
 
-  <body>
+{% include header.html %}
+
+  <!-- <body>
   	
-	{% include nav.html %}
+	{% include nav.html %}-->
 
 		{{ content }}
 		
 	{% include footera.html %}
   
-  </body>
+  <!--</body>-->
   
 </html>
