--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="header-left">
-    <a href="https://github.com/a-mar" target="_blank" title="a-mar @ GitHub">@a-mar</a>
+    <h4 class="project-tagline"><a href="https://github.com/a-mar" target="_blank" title="a-mar @ GitHub">@a-mar</a></h3>
   </div>
   <div id="header-right">
     <nav>
