--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="header-left">
-    <nav><ul><li><a href="https://github.com/a-mar" target="_blank" title="a-mar @ GitHub">@a-mar</a></li></ul></nav>
+    <h4>a-mar.github.io</h4>
   </div>
   <div id="header-right">
     <nav>
