--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="header-left">
-    <h3>a-mar.github.io</h3>
+    <a href="https://github.com/a-mar" target="_blank" title="@a-mar"><h4>a-mar.github.io</h4></a>
   </div>
   <div id="header-right">
     <nav>
