--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/lkjf.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=tex"></script>
 </head>
