--- a/stylesheets/asdf.css
+++ b/stylesheets/asdf.css
@@ -50,13 +50,13 @@ li.L1,li.L3,li.L5,li.L7,li.L9 { }
 
 @media print {
   pre .str, code .str { color: #060; }
-  pre .kwd, code .kwd { color: #006; font-family: 'FiraMono', font-weight: 300; }
+  pre .kwd, code .kwd { color: #006; font-family: "FiraMono", sans-serif; font-weight: 300; }
   pre .com, code .com { color: #600; font-style: italic; }
-  pre .typ, code .typ { color: #404; font-family: 'FiraMono', font-weight: 300; }
+  pre .typ, code .typ { color: #404; font-family: "FiraMono", font-weight: 300; }
   pre .lit, code .lit { color: #044; }
   pre .pun, code .pun { color: #440; }
   pre .pln, code .pln { color: #000; }
-  pre .tag, code .tag { color: #006; font-family: 'FiraMono', font-weight: 300; }
+  pre .tag, code .tag { color: #006; font-family: "FiraMono", font-weight: 300; }
   pre .atn, code .atn { color: #404; }
   pre .atv, code .atv { color: #060; }
 }
