--- a/stylesheets/lkjf.css
+++ b/stylesheets/lkjf.css
@@ -89,3 +89,8 @@
   font-family:'SSLig';
   src: url('https://raw.githubusercontent.com/a-mar/shiz/master/quelle/SourceSerifPro-Light.otf.woff') format('woff');
 }
+
+@font-face {
+  font-family:'CooHewBk';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/CooperHewitt-Book.woff') format('woff');
+}
