--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -192,7 +192,7 @@ h6 {
 .page-header, .project-tagline {
   color:#00B4F1;
   font-weight:300;
-  font-family:'CooHewBk', sans-serif;
+  font-family:'CooHewTh', sans-serif;
   text-align: center;
   font-size:4.5rem;
   margin: 0;
