--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -192,7 +192,7 @@ h6 {
 .page-header, .project-tagline {
   color:#00B4F1;
   font-weight:300;
-  font-family:'CooHewTh', sans-serif;
+  font-family:'Bauer', sans-serif;
   text-align: center;
   font-size:4.5rem;
   margin: 0;
@@ -220,7 +220,7 @@ h6 {
   border-bottom: solid 1px #eff0f1;
   margin-bottom:1rem;
   padding-bottom:1rem;
-  font-family:'Nuvo', sans-serif;
+  font-family:'CooHewTh', sans-serif;
   font-weight: normal;
   font-style: normal;
 }
@@ -240,7 +240,7 @@ h6 {
 #header-left a {
       font-size:2.5rem;
       color:#00B4F1;
-      font-family:'Nuvo', sans-serif;
+      font-family:'CooHewTh', sans-serif;
       border-bottom:none;
       background: transparent;
       display: block;
@@ -276,7 +276,7 @@ h6 {
       font-size: 2.5rem; } }
 
 .site-footer {
-  font-family:'Nuvo', sans-serif;
+  font-family:'CooHewTh', sans-serif;
   font-weight:300;
   padding-top: 3rem;
   margin-top: 3rem;
@@ -335,7 +335,7 @@ nav ul li {
     display: inline;
     margin-right:0px;
     margin-left:30px;
-    font-family:'Nuvo', sans-serif;
+    font-family:'CooHewTh', sans-serif;
     font-size: 90%;
 }
 
@@ -346,6 +346,7 @@ nav ul li {
     font-weight: normal;
     border-bottom:none;
     background:transparent;
+    text-transform: uppercase;
     }
       nav a:hover {
         color: #162833;
