--- a/stylesheets/lkjf.css
+++ b/stylesheets/lkjf.css
@@ -91,6 +91,6 @@
 }
 
 @font-face {
-  font-family:'CooHewTh';
-  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/CooperHewitt-Thin.woff') format('woff');
+  font-family:'CooHewBk';
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/CooperHewitt-Book.woff') format('woff');
 }
