--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -27,15 +27,21 @@ body {
   @media screen and (min-width: 64em) {
     body {
       /* font: 131%/1.33 'FiraBook', sans-serif; } } */
-      font: 132%/1.35 'SSLig', serif; } }
+      font: 132%/1.35 'SSLig', serif;
+      padding:0px 30px 30px;
+      width:59%; } }
   @media screen and (min-width: 42em) and (max-width: 64em) {
     body {
       /* font: 120%/1.2 'FiraBook', sans-serif; } } */
-      font: 123%/1.25 'SSLig', serif; } }
+      font: 123%/1.25 'SSLig', serif;
+      padding:0px 19px 19px;
+      width:67%; } }
   @media screen and (max-width: 42em) {
     body {
       /* font: 100%/1.1 'FiraBook', sans-serif; } } */
-      font: 100%/1.15 'SSLig', serif; } }
+      font: 100%/1.15 'SSLig', serif;
+      padding:0px 10px 10px;
+      width:83%; } }
 
 p {
   /* font-family: 'FiraBook', sans-serif; */
