--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -261,6 +261,17 @@ h6 {
 
 /* Page header */
   @media screen and (min-width: 64em) {
+    #header-left {
+      font-size:2.5rem; } }
+  @media screen and (min-width: 42em) and (max-width: 64em) {
+    #header-left {
+      font-size:1.7rem; } }
+  @media screen and (max-width: 42em) {
+    #header-left {
+      font-size:1.3rem; } }
+
+/* Page header */
+  @media screen and (min-width: 64em) {
     .page-header {
       padding: 1.3rem 0; } }
   @media screen and (min-width: 42em) and (max-width: 64em) {
