--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -261,13 +261,13 @@ h6 {
 
 /* Page header */
   @media screen and (min-width: 64em) {
-    #header-left {
+    #header-left a {
       font-size:2.5rem; } }
   @media screen and (min-width: 42em) and (max-width: 64em) {
-    #header-left {
+    #header-left a {
       font-size:1.7rem; } }
   @media screen and (max-width: 42em) {
-    #header-left {
+    #header-left a {
       font-size:1.3rem; } }
 
 /* Page header */
