--- a/stylesheets/lkjf.css
+++ b/stylesheets/lkjf.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family:'Bauer';
-  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/BauerGroteskWebPro-Medium.woff') format('woff');
+  src: url('https://cdn.rawgit.com/a-mar/shiz/master/ergh/BauerGroteskWebPro-Medium.woff') format('woff');
 }
 
 @font-face {
