--- a/_includes/heada.html
+++ b/_includes/heada.html
@@ -2,7 +2,7 @@
 <link rel="profile" href="/about">
 <link rel="icon" 
       type="image/png" 
-      href="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aao.png">
+      href="https://cdn.rawgit.com/a-mar/shiz/master/meh/aao.png">
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
