--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -268,7 +268,9 @@ h6 {
       font-size:1.7rem; } }
   @media screen and (max-width: 42em) {
     #header-left a {
-      font-size:1.3rem; } }
+      font-size:1.3rem;
+      margin: auto;
+      padding: auto; } }
 
 /* Page header */
   @media screen and (min-width: 64em) {
