--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -269,8 +269,7 @@ h6 {
   @media screen and (max-width: 42em) {
     #header-left a {
       font-size:1.3rem;
-      margin: auto;
-      padding: auto; } }
+      margin: 1em 0; } }
 
 /* Page header */
   @media screen and (min-width: 64em) {
