--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -238,14 +238,13 @@ h6 {
 }
 
 #header-left {
+  font: 2.5rem; 'CooHewLig', sans-serif;
   float: left;
   text-align: left;
   margin: 0.5em 0;
 }
    #header-left a {
-     font-size: 2.5rem;
      color: #00B4F1;
-     font-family:'CooHewLig', sans-serif;
      text-decoration: none;
      background: transparent;
      display: block;
