--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -241,7 +241,7 @@ h6 {
   font: 2.5rem; 'CooHewLig', sans-serif;
   float: left;
   text-align: left;
-  margin: 0.5em 0;
+  margin: auto;
 }
    #header-left a {
      color: #00B4F1;
