--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -241,6 +241,7 @@ h6 {
   font: 2.5rem; 'CooHewLig', sans-serif;
   float: left;
   text-align: left;
+  margin: 2em auto;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -258,10 +259,12 @@ h6 {
 /* Page header */
   @media screen and (min-width: 64em) {
     #header-left {
-      font-size: 2.5rem; } }
+      font-size: 2.5rem;
+      margin: 2em auto; } }
   @media screen and (min-width: 42em) and (max-width: 64em) {
     #header-left {
-      font-size: 1.7rem; } }
+      font-size: 1.7rem;
+      margin: 1.5em auto; } }
   @media screen and (max-width: 42em) {
     #header-left {
       font-size: 1.3rem;
