--- a/stylesheets/asdf.css
+++ b/stylesheets/asdf.css
@@ -10,8 +10,8 @@ code,kbd,pre,samp {
   /*width: 700px;*/
   font-size:71%;
   line-height:1.31;
-  /* background-color: rgba(217,217,47,0.25); */
-  background-color: rgba(255,185,13,0.3);
+  /* background-color: rgba(217,217,47,0.25); background-color: rgba(255,185,13,0.3);*/
+  background-color: rgba(199,199,0,0.3);
   color:#455;
   border-radius: 3px;
   padding:2px 6px;
