--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -98,7 +98,7 @@ a {
   text-decoration: none;
   padding:0.7px 1.3px; 
   border-radius: 8px;
-  background: linear-gradient(to right, rgba(0,100,107,0.73) 50%, transparent 0%);
+  background: linear-gradient(to right, #B2FF0D, #004952, #005D64, #007B82, rgba(0,186,186,0.73) 50%, transparent 0%);
   background-size: 201% 100%;
   background-position:right bottom;
   -webkit-transition: all 0.3s;
