--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -431,6 +431,8 @@ img.fig {
   display: block;
   margin-left: 0;
   margin-right: auto;
+  border: solid 1px #007B82;
+  border-radius: 5px;
 }
 
 /* Image Figure*/
