--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -60,7 +60,8 @@ p {
 }
 
 .sidenote {
-  font: 133%/1.35; 'CooHewLig', sans-serif;
+  font-family: 'CooHewLig', sans-serif;
+  font-size: 1.5em;
   color: #007B82;
   text-transform: uppercase;
   margin-left: auto;
